# xescoba

./: AUTHORS  ChangeLog  ChangeLog.es  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.es  aclocal.m4  config.h.in  configure  configure.ac  configure.scan
data/: Makefile.am  Makefile.in  carta.au  mesa.xpm  repartir.au  risa.au  tapete.xpm  tapete2.xpm  tapete3.xpm  trampa.au  trampa.es.au  xescobarc
doc/: Makefile.am  Makefile.in  TODO  TODO.es  xescoba.6  xescoba.es.6  xescoba.lsm
libcartas/: Makefile.am  Makefile.in  as_bastos.cc  as_copas.cc  as_espadas.cc  as_oros.cc  caballo_bastos.cc  caballo_copas.cc  caballo_espadas.cc  caballo_oros.cc  cartas.h  cinco_bastos.cc  cinco_copas.cc  cinco_espadas.cc  cinco_oros.cc  cuatro_bastos.cc  cuatro_copas.cc  cuatro_espadas.cc  cuatro_oros.cc  cubierta.cc  dos_bastos.cc  dos_copas.cc  dos_espadas.cc  dos_oros.cc  rey_bastos.cc  rey_copas.cc  rey_espadas.cc  rey_oros.cc  seis_bastos.cc  seis_copas.cc  seis_espadas.cc  seis_oros.cc  siete_bastos.cc  siete_copas.cc  siete_espadas.cc  siete_oros.cc  sota_bastos.cc  sota_copas.cc  sota_espadas.cc  sota_oros.cc  (+4 more)
libcomun/: Makefile.am  Makefile.in  comun.cc  comun.h
libiconos/: Makefile.am  Makefile.in  iconos.h  info2.cc  xescoba.cc
m4/: ChangeLog
po/: ChangeLog  Makevars  POTFILES.in  es.gmo  es.po  xescoba.pot
src/: Makefile.am  Makefile.in  baraja.cc  baraja.h  config.cc  config.h  escoba.cc  func.cc  funcmenu.cc  help.cc  help.h  idle.cc  jugador.cc  jugador.h  licencia.h  main.cc  menu.cc  xescoba.h
