noinst_LIBRARIES = libcartas.a
libcartas_a_SOURCES = as_bastos.cc rey_bastos.cc dos_copas.cc dos_bastos.cc \
cuatro_bastos.cc \
sota_bastos.cc \
siete_bastos.cc \
tres_bastos.cc \
as_oros.cc \
dos_espadas.cc \
tres_espadas.cc \
seis_espadas.cc \
cuatro_oros.cc \
cinco_espadas.cc \
siete_espadas.cc \
sota_espadas.cc \
caballo_copas.cc \
dos_oros.cc \
tres_oros.cc \
rey_copas.cc \
seis_oros.cc \
cinco_oros.cc \
siete_oros.cc \
as_copas.cc \
rey_espadas.cc \
tres_copas.cc \
cuatro_copas.cc \
cinco_copas.cc \
seis_copas.cc \
siete_copas.cc \
sota_copas.cc \
as_espadas.cc \
caballo_bastos.cc \
caballo_espadas.cc \
caballo_oros.cc \
cinco_bastos.cc \
cuatro_espadas.cc \
rey_oros.cc \
seis_bastos.cc \
sota_oros.cc \
cubierta.cc

noinst_HEADERS = cartas.h
